---
source: compiler/toc-analysis/src/typeck/test.rs
expression: "type c : 1 .. true"
---
"c"@"src/main.t:5..6" [Type]: alias[DefId(PackageId(0), LocalDefId(0))] of range of `int` (Unevaluated(PackageId(0), BodyId(0)) .. Expr(Unevaluated(PackageId(0), BodyId(1)), No))
"<root>"@"<unknown>:0..0" [Module(No)]: <error>

error at src/main.t:9..18: mismatched types
| note for src/main.t:14..18: this is of type `boolean`
| note for src/main.t:9..10: this is of type `{integer}`
| error for src/main.t:9..18: `{integer}` is not equivalent to `boolean`
| info: range bound types must be equivalent
